<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triage.RecordPrescriptionActivity" >

    <TextView
        android:id="@+id/tv_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/medication" />

    <EditText
        android:id="@+id/et_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_medication"
        android:layout_below="@+id/tv_medication"
        android:ems="10"
        android:hint="@string/med" />

    <TextView
        android:id="@+id/tv_med_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_medication"
        android:text="@string/med_instructions" />

    <Button
        android:id="@+id/b_save_prescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_med_instructions"
        android:layout_alignParentBottom="true"
        android:text="Save" 
        android:onClick="CreatePrescriptionRecord"/>

    <EditText
        android:id="@+id/et_med_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_save_prescription"
        android:layout_alignLeft="@+id/tv_med_instructions"
        android:layout_below="@+id/tv_med_instructions"
        android:ems="10"
        android:hint="@string/med_instruct_instruct"
        android:inputType="textMultiLine" />

</RelativeLayout>