<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LookUpActivity" >

    <Button
        android:id="@+id/b_lookUp"
        style="?android:attr/buttonStyleToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uvt_et_age"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="lookUp"
        android:text="@string/look_up" />

    <EditText
        android:id="@+id/uvt_et_age"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sbp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/phcn"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_sbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uvt_et_age"
        android:layout_alignParentTop="true"
        android:layout_marginTop="112dp"
        android:text="@string/instruc_input"
        android:textSize="18sp" />

</RelativeLayout>
