<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triage.UpdateVitalSignsActivity" >

    <TextView
        android:id="@+id/uvs_tv_patientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="patient"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b_updateVital"
        style="?android:attr/buttonStyleToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uvs_et_temperature"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="62dp"
        android:onClick="updateVitalSigns"
        android:text="@string/update" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/uvs_et_temperature"
        android:layout_alignBottom="@+id/uvs_et_temperature"
        android:layout_alignLeft="@+id/txtv_displayInstructionsForVitalSigns"
        android:text="Temperature"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/uvs_et_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtv_displayInstructionsForVitalSigns"
        android:layout_below="@+id/txtv_displayInstructionsForVitalSigns"
        android:layout_toRightOf="@+id/tv_temp"
        android:ems="10"
        android:hint="@string/tidc"
        android:inputType="numberDecimal"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/uvs_et_heartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uvs_et_systolicBloodPressure"
        android:layout_alignRight="@+id/uvs_et_temperature"
        android:layout_below="@+id/uvs_et_diastolicBloodPressure"
        android:ems="10"
        android:hint="@string/hr"
        android:inputType="number"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/uvs_et_diastolicBloodPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uvs_et_temperature"
        android:layout_alignRight="@+id/uvs_et_heartRate"
        android:layout_below="@+id/uvs_et_systolicBloodPressure"
        android:ems="10"
        android:hint="@string/dbp"
        android:inputType="number"
        android:textSize="13sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtv_displayInstructionsForVitalSigns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uvs_tv_patientName"
        android:layout_below="@+id/uvs_tv_patientName"
        android:layout_marginTop="51dp"
        android:text="@string/vs_input_instructions"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/uvs_et_systolicBloodPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/uvs_et_temperature"
        android:layout_toEndOf="@id/tv_sbp"
        android:ems="10"
        android:hint="@string/sbp"
        android:inputType="number"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_sbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/uvs_et_systolicBloodPressure"
        android:layout_alignBottom="@+id/uvs_et_systolicBloodPressure"
        android:layout_alignLeft="@+id/tv_temp"
        android:text="Systolic BP"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_dbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/uvs_et_diastolicBloodPressure"
        android:layout_alignBottom="@+id/uvs_et_diastolicBloodPressure"
        android:layout_alignLeft="@+id/tv_sbp"
        android:text="Diastolic BP"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_heartrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/uvs_et_heartRate"
        android:layout_alignBottom="@+id/uvs_et_heartRate"
        android:layout_alignLeft="@+id/tv_dbp"
        android:text="Heart Rate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>