<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateVisitRecordActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/cpr_tv_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/age" />

    <TextView
        android:id="@+id/cpr_tv_bod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scrollView1"
        android:text="@string/vital_signs"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold" />
     <requestFocus />

    <EditText
        android:id="@+id/et_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cpr_tv_name"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/cpr_tv_name"
        android:layout_toRightOf="@id/cpr_tv_name"
        android:ems="10"
        android:inputType="numberDecimal" >

       
    </EditText>

    <EditText
        android:id="@+id/et_dbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/vvr_temperature"
        android:layout_alignRight="@+id/et_temp"
        android:layout_toRightOf="@+id/vvr_temperature"
        android:inputType="numberDecimal"
        android:ems="10" />

    <TextView
        android:id="@+id/vvr_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpr_tv_name"
        android:layout_below="@+id/cpr_tv_name"
        android:layout_marginTop="32dp"
        
        android:text="@string/Diastolic_Blood_Pressure" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vvr_temperature"
        android:layout_below="@+id/vvr_temperature"
        android:layout_marginTop="30dp"
        android:text="Systolic Blood Pressure" />

    <EditText
        android:id="@+id/et_sbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/et_dbp"
        android:ems="10" />

    <TextView
        android:id="@+id/vvr_sbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_hr"
        android:layout_alignBottom="@+id/et_hr"
        android:layout_alignLeft="@+id/textView4"
        android:text="Heart Rate" />

    <EditText
        android:id="@+id/et_hr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/vvr_sbp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/cpr_save"
        style="?android:attr/buttonStyleToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/et_hr"
        android:layout_marginBottom="76dp"
        android:onClick="CreateVisitRecord"
        android:text="Create a new visit record" />

    <TextView
        android:id="@+id/cpr_tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_temp"
        android:layout_alignRight="@+id/et_temp"
        android:text="@string/cprage"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cpr_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpr_tv_a"
        android:layout_below="@+id/cpr_tv_a"
        android:layout_marginTop="17dp"
        android:text="@string/Temperature" />

</RelativeLayout>